# cluster-kit

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: launcher-design.md
src/cluster_kit/: __init__.py  cli.py  config.py
src/cluster_kit/common/: __init__.py
src/cluster_kit/launch/: __init__.py  launcher.py  worker.slurm
src/cluster_kit/sync/: __init__.py  code.py  outputs.py  transfer.py
src/cluster_kit/tui/: __init__.py  app.py  app_phone.py  controller.py  phone_access.py  screens.py  styles.py
src/cluster_kit/tui/backend/: __init__.py  available_resources.py  job_actions.py  log_discovery.py  queue_parser.py  ssh.py
src/cluster_kit/tui/widgets/: __init__.py  available_resources_table.py  log_viewer.py  phone_queue_selector.py  queue_table.py  status_bar.py
src/cluster_kit/utils/: __init__.py  cache.py  clipboard.py  display.py  rsync.py  ssh.py
tests/: __init__.py  test_cli.py  test_config.py  test_utils.py
